--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@handlebars/allow-prototype-access": "^1.0.5",
     "@rauschma/stringio": "^1.4.0",
     "adafruit-neotrellis": "^0.4.0",
+    "body-parser": "^1.19.0",
     "child-process": "^1.0.2",
     "date-fns": "^2.19.0",
     "express": "^4.17.1",
     "handlebars": "^4.7.7",
+    "mongoose": "^5.12.7",
     "node-fetch": "^2.6.1",
     "react": "^17.0.2",
     "slugify": "^1.5.0"
