--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "handlebars": "^4.7.7",
     "mongoose": "^5.12.7",
+    "node-cron": "^3.0.0",
     "node-fetch": "^2.6.1",
     "react": "^17.0.2",
     "slugify": "^1.5.0"
