--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "adafruit-neotrellis": "^0.4.0",
     "body-parser": "^1.19.0",
     "child-process": "^1.0.2",
+    "cron-parser": "^3.5.0",
     "date-fns": "^2.19.0",
     "express": "^4.17.1",
     "handlebars": "^4.7.7",
